--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -34,3 +34,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  test:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Test job
+        run: echo testing...
+  
